--- a/index.html
+++ b/index.html
@@ -102,18 +102,42 @@ textarea,input{
   font-family:'Syne',sans-serif;
 }
 
-.gallery{
-  padding:80px 20px;
-  max-width:700px;
-  margin:auto;
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:12px;
+/* GALERÍA */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* 2 columnas en PC */
+  gap: 12px;
+  padding: 20px;
 }
-.gallery div{
-  height:160px;
-  background:#1a1a1a;
-  border-radius:16px;
+
+/* CONTENEDOR DE CADA FOTO */
+.gallery div {
+  overflow: hidden;
+  border-radius: 14px;
+ 
+}
+
+/* IMAGEN */
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.4s ease;
+}
+
+/* EFECTO PRO AL PASAR EL MOUSE */
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
+/* 📱 MODO MÓVIL */
+@media (max-width: 768px) {
+  .gallery {
+    grid-template-columns: 1fr; /* una foto debajo de otra */
+    gap: 16px;
+    padding: 15px;
+  }
 }
 
 footer{
@@ -198,7 +222,10 @@ footer{
 </section>
 
 <section class="gallery">
-  <div></div><div></div><div></div><div></div>
+  <div><img src="img/foto1.png" alt="tatuaje 1"></div>
+  <div><img src="img/foto2.png" alt="tatuaje 2"></div>
+  <div><img src="img/foto3.png" alt="tatuaje 3"></div>
+  <div><img src="img/foto4.png" alt="tatuaje 4"></div>
 </section>
 
 <footer>Solo con reserva previa — 2026</footer>
