--- a/cuidados.html
+++ b/cuidados.html
@@ -204,7 +204,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">Studio QUISSCO</div>
+            <div class="logo">QUISSCO</div>
             <h1>Cuidados</h1>
             <p class="subtitle">Sigue estas instrucciones para que tu tatuaje sane perfectamente</p>
         </header>
